--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/images/
+  # fonts:
+  #   - family: Poppins
+  #     fonts:
+  #       - asset: assets/fonts/Poppins/Poppins-Regular.ttf
+  #       - asset: assets/fonts/Poppins/Poppins-Italic.ttf
+  #         style: italic
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
