--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  from_css_color: any
+  hexcolor: ^3.0.1
   google_fonts: ^6.1.0
   url_launcher: ^6.1.14
 
